--- a/package.json
+++ b/package.json
@@ -28,13 +28,12 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "sweetalert": "^2.1.2",
-    "ts-node": "10.9.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^22.5.4",
+    "@types/node": "^22.18.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
@@ -45,6 +44,7 @@
     "prettier": "^3.3.1",
     "prettier-eslint": "^16.3.0",
     "prisma": "^6.15.0",
-    "typescript": "^5.4.5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
