--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-router": "^7.8.2",
+    "react-router-dom": "^7.8.2",
     "sweetalert": "^2.1.2",
     "ts-node": "10.9.2",
     "yup": "^1.4.0"
