--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@ngneat/falso": "^7.2.0",
     "@prisma/client": "^6.15.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.3",
+    "jsonwebtoken": "^9.0.2",
     "multiselect-react-dropdown": "^2.0.25",
     "next": "^14.2.24",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
@@ -33,7 +36,9 @@
   "devDependencies": {
     "@playwright/test": "^1.48.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.18.1",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
