--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.3",
+    "cookie": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "multiselect-react-dropdown": "^2.0.25",
     "next": "^14.2.24",
