--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,4 @@ jobs:
         run: npm run lint
 
       - name: Run TestCafe Acceptance Tests
-        run: npx testcafe "chrome:headless" tests/ 
+        run: npm run test-acceptance-development
