--- a/package.json
+++ b/package.json
@@ -1,63 +1,63 @@
 {
-  "name": "nextjs-application-template-1",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "dev-https": "next dev --experimental-https",
-    "build": "prisma generate && next build",
-    "start": "next start",
-    "lint": "next lint",
-    "playwright-development": "npx playwright test",
-    "test-acceptance-development": "testcafe chrome tests/acceptance/*.testcafe.js --selector-timeout 3000",
-    "test-acceptance-single": "testcafe chrome:headless tests/acceptance/*.testcafe.js",
-    "test-acceptance-ci": "testcafe 'chromium:headless --no-sandbox' tests/acceptance/*.testcafe.js"
-  },
-  "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.6.0",
-    "@ngneat/falso": "^7.2.0",
-    "@prisma/client": "^6.15.0",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
-    "bootstrap": "^5.3.3",
-    "cookie": "^1.0.2",
-    "framer-motion": "^12.23.12",
-    "jsonwebtoken": "^9.0.2",
-    "multiselect-react-dropdown": "^2.0.25",
-    "next": "^14.2.24",
-    "next-auth": "^4.24.11",
-    "nodemailer": "^6.10.1",
-    "react": "^18",
-    "react-bootstrap": "^2.10.4",
-    "react-bootstrap-icons": "^1.11.4",
-    "react-dom": "^18",
-    "react-hook-form": "^7.52.0",
-    "react-router": "^7.8.2",
-    "react-router-dom": "^7.8.2",
-    "sweetalert": "^2.1.2",
-    "yup": "^1.4.0"
-  },
-  "devDependencies": {
-    "@playwright/test": "^1.48.2",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^22.18.1",
-    "@types/nodemailer": "^7.0.1",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-config-next": "14.2.10",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.3.1",
-    "prettier-eslint": "^16.3.0",
-    "prisma": "^6.15.0",
-    "testcafe": "^3.7.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
-  }
+    "name": "nextjs-application-template-1",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "dev-https": "next dev --experimental-https",
+        "build": "prisma generate && next build",
+        "start": "next start",
+        "lint": "next lint",
+        "playwright-development": "npx playwright test",
+        "test-acceptance-development": "testcafe \"chrome:headless\" tests/acceptance/*.testcafe.js --selector-timeout 3000 --window-size 1920,1080",
+        "test-acceptance-single": "testcafe chrome:headless tests/acceptance/*.testcafe.js",
+        "test-acceptance-ci": "testcafe 'chromium:headless --no-sandbox' tests/acceptance/*.testcafe.js --window-size 1920,1080"
+    },
+    "prisma": {
+        "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    },
+    "dependencies": {
+        "@hookform/resolvers": "^3.6.0",
+        "@ngneat/falso": "^7.2.0",
+        "@prisma/client": "^6.15.0",
+        "bcrypt": "^5.1.1",
+        "bcryptjs": "^3.0.2",
+        "bootstrap": "^5.3.3",
+        "cookie": "^1.0.2",
+        "framer-motion": "^12.23.12",
+        "jsonwebtoken": "^9.0.2",
+        "multiselect-react-dropdown": "^2.0.25",
+        "next": "^14.2.24",
+        "next-auth": "^4.24.11",
+        "nodemailer": "^6.10.1",
+        "react": "^18",
+        "react-bootstrap": "^2.10.4",
+        "react-bootstrap-icons": "^1.11.4",
+        "react-dom": "^18",
+        "react-hook-form": "^7.52.0",
+        "react-router": "^7.8.2",
+        "react-router-dom": "^7.8.2",
+        "sweetalert": "^2.1.2",
+        "yup": "^1.4.0"
+    },
+    "devDependencies": {
+        "@playwright/test": "^1.48.2",
+        "@types/bcrypt": "^5.0.2",
+        "@types/jsonwebtoken": "^9.0.10",
+        "@types/node": "^22.18.1",
+        "@types/nodemailer": "^7.0.1",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-typescript": "^18.0.0",
+        "eslint-config-next": "14.2.10",
+        "eslint-config-prettier": "^9.1.0",
+        "prettier": "^3.3.1",
+        "prettier-eslint": "^16.3.0",
+        "prisma": "^6.15.0",
+        "testcafe": "^3.7.2",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.9.2"
+    }
 }
