--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -18,5 +18,28 @@
     {"name": "Broccoli", "type": "vegetable", "location": "fridge", "quantity": 8, "expiration": "2025-10-10T00:00:00.000Z", "owner": "john@foo.com"},
     {"name": "Chicken Breast", "type": "meat", "location": "freezer", "quantity": 5, "expiration": "2026-01-20T00:00:00.000Z", "owner": "john@foo.com"},
     {"name": "Salmon Fillet", "type": "meat", "location": "freezer", "quantity": 4, "expiration": "2026-02-15T00:00:00.000Z", "owner": "john@foo.com"}
-  ]
+  ],
+
+  "defaultShoppingList": [
+  {
+    "name": "Weekly Groceries",
+    "owner": "john@foo.com",
+    "items": [
+      { "produceName": "Banana", "quantity": 6, "price": 0.5 },
+      { "produceName": "Apple", "quantity": 4, "price": 0.75 },
+      { "produceName": "Carrot", "quantity": 3, "price": 0.3 }
+    ]
+  },
+  {
+    "name": "Party Prep",
+    "owner": "admin@foo.com",
+    "items": [
+      { "produceName": "Broccoli", "quantity": 2, "price": 1.2 },
+      { "produceName": "Chicken Breast", "quantity": 2, "price": 5.0 },
+      { "produceName": "Salmon Fillet", "quantity": 1, "price": 7.5 }
+    ]
+  }
+]
+
+
 }
