--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "@playwright/test": "^1.48.2",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^22.18.1",
+    "@types/node": "^22.18.6",
     "@types/nodemailer": "^7.0.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^8",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
