--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -12,12 +12,60 @@
   ],
 
   "defaultProduce": [
-    {"name": "Banana", "type": "fruit", "location": "pantry", "quantity": 20, "expiration": "2025-12-31T00:00:00.000Z", "owner": "john@foo.com"},
-    {"name": "Apple", "type": "fruit", "location": "pantry", "quantity": 15, "expiration": "2025-11-30T00:00:00.000Z", "owner": "john@foo.com"},
-    {"name": "Carrot", "type": "vegetable", "location": "fridge", "quantity": 10, "expiration": "2025-10-15T00:00:00.000Z", "owner": "john@foo.com"},
-    {"name": "Broccoli", "type": "vegetable", "location": "fridge", "quantity": 8, "expiration": "2025-10-10T00:00:00.000Z", "owner": "john@foo.com"},
-    {"name": "Chicken Breast", "type": "meat", "location": "freezer", "quantity": 5, "expiration": "2026-01-20T00:00:00.000Z", "owner": "john@foo.com"},
-    {"name": "Salmon Fillet", "type": "meat", "location": "freezer", "quantity": 4, "expiration": "2026-02-15T00:00:00.000Z", "owner": "john@foo.com"}
+    {
+      "name": "Banana",
+      "type": "fruit",
+      "location": "pantry",
+      "quantity": 20.00,
+      "unit": "pieces",
+      "expiration": "2025-12-31T00:00:00.000Z",
+      "owner": "john@foo.com"
+    },
+    {
+      "name": "Apple",
+      "type": "fruit",
+      "location": "pantry",
+      "quantity": 15.00,
+      "unit": "pieces",
+      "expiration": "2025-11-30T00:00:00.000Z",
+      "owner": "john@foo.com"
+    },
+    {
+      "name": "Carrot",
+      "type": "vegetable",
+      "location": "fridge",
+      "quantity": 10.00,
+      "unit": "pieces",
+      "expiration": "2025-10-15T00:00:00.000Z",
+      "owner": "john@foo.com"
+    },
+    {
+      "name": "Broccoli",
+      "type": "vegetable",
+      "location": "fridge",
+      "quantity": 8.00,
+      "unit": "heads",
+      "expiration": "2025-10-10T00:00:00.000Z",
+      "owner": "john@foo.com"
+    },
+    {
+      "name": "Chicken Breast",
+      "type": "meat",
+      "location": "freezer",
+      "quantity": 5.00,
+      "unit": "pieces",
+      "expiration": "2026-01-20T00:00:00.000Z",
+      "owner": "john@foo.com"
+    },
+    {
+      "name": "Salmon Fillet",
+      "type": "meat",
+      "location": "freezer",
+      "quantity": 4.00,
+      "unit": "fillets",
+      "expiration": "2026-02-15T00:00:00.000Z",
+      "owner": "john@foo.com"
+    }
   ],
 
   "defaultShoppingList": [
