--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -73,14 +73,14 @@
       "name": "Weekly Groceries",
       "owner": "john@foo.com",
       "items": [
-        { "produceName": "Banana", "quantity": 6, "price": 0.5 },
+        { "produceName": "Banana", "quantity": 6,  "price": 0.5 },
         { "produceName": "Apple", "quantity": 4, "price": 0.75 },
         { "produceName": "Carrot", "quantity": 3, "price": 0.3 }
       ]
     },
     {
       "name": "Party Prep",
-      "owner": "admin@foo.com",
+      "owner": "john@foo.com",
       "items": [
         { "produceName": "Broccoli", "quantity": 2, "price": 1.2 },
         { "produceName": "Chicken Breast", "quantity": 2, "price": 5.0 },
