Update CI and tests to use local server URLs
Replaces hardcoded Vercel URLs with localhost URLs in all TestCafe acceptance tests for local development and CI consistency. Updates the CI workflow to use a new npm script 'test-acceptance-ci' that starts the app before running tests. Adds 'start-server-and-test' and 'wait-on' as dev dependencies to support improved test orchestration.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      - name: Run TestCafe Acceptance Tests on Vercel
-        run: npm run test-acceptance-vercel
+      - name: Run TestCafe Acceptance Tests
+        run: npm run test-acceptance-ci
