--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "playwright-development": "npx playwright test",
-    "test-acceptance-vercel": "testcafe 'chrome:headless' tests/acceptance/*.testcafe.js --selector-timeout 3000 --window-size 1920,1080",
+    "test-acceptance-ci": "testcafe 'chrome:headless' tests/acceptance/*.testcafe.js --app 'npm run build && npm run start' --window-size 1920,1080 --app-init-delay 30000",
+    "test-acceptance-local": "testcafe 'chrome' tests/acceptance/*.testcafe.js --app 'npm run build && npm run start' --window-size 1920,1080 --app-init-delay 30000",
     "test-acceptance-single": "testcafe 'chrome:headless' tests/acceptance/*.testcafe.js --window-size 1920,1080"
   },
   "prisma": {
@@ -57,8 +58,10 @@
     "prettier": "^3.3.1",
     "prettier-eslint": "^16.3.0",
     "prisma": "^6.16.2",
+    "start-server-and-test": "^2.1.2",
     "testcafe": "^3.7.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "wait-on": "^9.0.1"
   }
 }
