--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,8 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: Run TestCafe Acceptance Tests
+        env:
+          NEXTAUTH_URL = "http://localhost:3000"
+          NEXTAUTH_SECRET = ${{ secrets.NEXTAUTH_SECRET }}
+          DATABASE_URL = ${{ secrets.DATABASE_URL }}
         run: npm run test-acceptance-ci
