--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Run TestCafe Acceptance Tests
         env:
-          NEXTAUTH_URL = "http://localhost:3000"
-          NEXTAUTH_SECRET = ${{ secrets.NEXTAUTH_SECRET }}
-          DATABASE_URL = ${{ secrets.DATABASE_URL }}
+          NEXTAUTH_URL: "http://localhost:3000"
+          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: npm run test-acceptance-ci
