--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "next start",
     "lint": "next lint",
     "playwright-development": "npx playwright test",
-    "test-acceptance-vercel": "testcafe 'chrome:headless' tests/acceptance/*.testcafe.js --selector-timeout 3000 --window-size 1920,1080",
+    "test-acceptance-ci": "testcafe 'chrome:headless' tests/acceptance/*.testcafe.js --app 'npm run build && npm run start' --window-size 1920,1080 --app-init-delay 60000",
+    "test-acceptance-local": "testcafe 'chrome' tests/acceptance/*.testcafe.js --app 'npm run build && npm run start' --window-size 1920,1080 --app-init-delay 20000",
     "test-acceptance-single": "testcafe 'chrome:headless' tests/acceptance/*.testcafe.js --window-size 1920,1080"
+
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
