Standardize produce type and storage casing
Updated the casing for 'type' and 'storage' fields in defaultProduce items to use title case for consistency and improved readability.

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -14,9 +14,9 @@
   "defaultProduce": [
     {
       "name": "Banana",
-      "type": "fruit",
+      "type": "Fruit",
       "location": "House 1",
-      "storage": "pantry",
+      "storage": "Pantry",
       "quantity": 20.00,
       "unit": "pieces",
       "expiration": "2025-12-31T00:00:00.000Z",
@@ -25,9 +25,9 @@
     },
     {
       "name": "Apple",
-      "type": "fruit",
+      "type": "Fruit",
       "location": "House 1",
-      "storage": "pantry",
+      "storage": "Pantry",
       "quantity": 15.00,
       "unit": "pieces",
       "expiration": "2025-11-30T00:00:00.000Z",
@@ -36,9 +36,9 @@
     },
     {
       "name": "Carrot",
-      "type": "vegetable",
+      "type": "Vegetable",
       "location": "House 2",
-      "storage": "fridge",
+      "storage": "Fridge",
       "quantity": 10.00,
       "unit": "pieces",
       "expiration": "2025-10-15T00:00:00.000Z",
@@ -47,9 +47,9 @@
     },
     {
       "name": "Broccoli",
-      "type": "vegetable",
+      "type": "Vegetable",
       "location": "House 2",
-      "storage": "fridge",
+      "storage": "Fridge",
       "quantity": 8.00,
       "unit": "heads",
       "expiration": "2025-10-10T00:00:00.000Z",
@@ -58,9 +58,9 @@
     },
     {
       "name": "Chicken Breast",
-      "type": "meat",
+      "type": "Meat",
       "location": "House 1",
-      "storage": "freezer",
+      "storage": "Freezer",
       "quantity": 5.00,
       "unit": "pieces",
       "expiration": "2026-01-20T00:00:00.000Z",
@@ -69,9 +69,9 @@
     },
     {
       "name": "Salmon Fillet",
-      "type": "meat",
+      "type": "Meat",
       "location": "House 2",
-      "storage": "freezer",
+      "storage": "Freezer",
       "quantity": 4.00,
       "unit": "fillets",
       "expiration": "2026-02-15T00:00:00.000Z",
