--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -193,111 +193,183 @@
 
   "defaultRecipes": [
     {
+      "title": "Chicken Pot Pie",
+      "cuisine": "American",
+      "description": "A comforting chicken pot pie with tender chicken, carrots, peas and celery in a creamy sauce, topped with a flaky crust.",
+      "imageUrl": "https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F03%2F09%2F26317-chicken-pot-pie-mfs-481.jpg&w=160&q=60&c=sc&poi=auto&orient=true&h=90",
+      "dietary": ["Gluten-Free"],
+      "ingredients": [
+        "chicken breast",
+        "carrots",
+        "peas",
+        "celery",
+        "butter",
+        "onion",
+        "flour",
+        "salt",
+        "black pepper",
+        "chicken broth",
+        "milk",
+        "pie crusts"
+      ],
+      "instructions": "1. Preheat oven to 425°F (220°C).\n2. Combine chicken, carrots, peas and celery in a saucepan; add water to cover, boil 15 minutes then drain.\n3. In another saucepan melt butter, cook onion until translucent (5-7 min). Stir in flour, salt, pepper and celery seed.\n4. Gradually stir in chicken broth and milk, then simmer 5-10 minutes until thickened.\n5. Place chicken and vegetable mixture into bottom pie crust; pour in broth mixture.\n6. Cover with top crust, seal edges, cut slits in top to allow steam escape.\n7. Bake 30-35 minutes or until pastry is golden and filling is bubbly. Cool 10 minutes before serving.",
+      "servings": 8,
+      "prepMinutes": 20,
+      "cookMinutes": 50,
+      "sourceUrl": "https://www.allrecipes.com/recipe/26317/chicken-pot-pie-ix/",
+      "owner": "admin@foo.com"
+    },
+    {
       "title": "Chicken Katsu Curry",
       "cuisine": "Japanese",
       "description": "Crispy panko chicken cutlet with Japanese curry over rice.",
       "imageUrl": "https://feedgrump.com/wp-content/uploads/2023/05/hawaii-chicken-katsu-curry-plating-feature-500x500.jpg",
       "dietary": ["Dairy-Free"],
       "ingredients": ["chicken thighs", "panko", "eggs", "flour", "oil", "onion", "carrot", "potato", "curry roux", "chicken stock", "rice"],
+      "instructions": "1. Season chicken, dredge in flour, dip in beaten eggs, and coat in panko.\n2. Shallow-fry in 350°F (175°C) oil until golden and cooked through; drain on rack.\n3. For curry: sauté onion, carrot, and potato in a little oil until aromatic.\n4. Add chicken stock, simmer until vegetables are tender.\n5. Stir in curry roux blocks to thicken; simmer 5 minutes.\n6. Slice katsu, plate over steamed rice, ladle curry over the top.",
+      "servings": 4,
+      "prepMinutes": 20,
+      "cookMinutes": 25,
+      "sourceUrl": "https://japan.recipetineats.com/katsu-curry-japanese-curry-rice-with-chicken-cutlet/",
       "owner": "admin@foo.com"
     },
     {
-      "title": "Beef Wellington",
-      "cuisine": "British",
-      "description": "Tenderloin wrapped with mushroom duxelles, prosciutto, puff pastry.",
       "imageUrl": "https://static01.nyt.com/images/2019/12/13/dining/mc-beef-wellington/mc-beef-wellington-mediumSquareAt3X-v2.jpg",
       "dietary": ["Contains Dairy"],
       "ingredients": ["beef tenderloin", "mushrooms", "shallots", "garlic", "thyme", "prosciutto", "puff pastry", "egg", "dijon mustard", "butter"],
+      "instructions": "1. Sear seasoned tenderloin in hot pan to brown; cool, then brush with Dijon.\n2. Chop mushrooms, shallots, garlic; cook down with butter and thyme until dry (duxelles); cool.\n3. On plastic wrap, lay prosciutto slices overlapping, spread duxelles on top.\n4. Place tenderloin on duxelles, roll tightly in prosciutto; chill 15–20 min.\n5. Wrap in puff pastry, seal, brush with egg wash; score decoratively.\n6. Bake at 400°F (205°C) until pastry is golden and center reads 125–130°F (52–54°C) for medium-rare; rest 10–15 min before slicing.",
+      "servings": 6,
+      "prepMinutes": 40,
+      "cookMinutes": 35,
+      "sourceUrl": "https://www.simplyrecipes.com/recipes/beef_wellington/",
       "owner": "admin@foo.com"
     },
     {
-      "title": "Chicken Enchiladas",
-      "cuisine": "Mexican",
-      "description": "Tortillas filled with shredded chicken, topped with enchilada sauce and cheese.",
       "imageUrl": "https://www.tasteofhome.com/wp-content/uploads/2024/03/Easy-Chicken-Enchiladas_FT24_32264_JR_0312_3.jpg?fit=700%2C1024",
       "dietary": ["Contains Dairy"],
       "ingredients": ["corn tortillas", "shredded chicken", "enchilada sauce", "cheddar cheese", "onion", "cilantro", "cumin", "chili powder", "sour cream (optional)"],
+      "instructions": "1. Preheat oven to 375°F (190°C). Lightly oil a 9x13 pan.\n2. Mix shredded chicken with a bit of enchilada sauce, onion, cumin, and chili powder.\n3. Warm tortillas until pliable; fill with chicken mixture and a little cheese; roll and place seam-side down.\n4. Pour remaining sauce over, top with cheese.\n5. Bake 20–25 minutes until bubbly; rest 5 minutes, garnish with cilantro and optional sour cream.",
+      "servings": 4,
+      "prepMinutes": 20,
+      "cookMinutes": 25,
+      "sourceUrl": "https://www.isabeleats.com/red-chicken-enchiladas/",
       "owner": "admin@foo.com"
     },
     {
-      "title": "Spring Rolls",
-      "cuisine": "Vietnamese",
-      "description": "Crispy rolls with pork, shrimp, and veggies; serve with nuoc cham.",
       "imageUrl": "https://themom100.com/wp-content/uploads/2024/01/vietnamese-spring-rolls-5580.jpg",
       "dietary": ["Dairy-Free"],
       "ingredients": ["spring roll wrappers", "ground pork", "shrimp", "cabbage", "carrot", "glass noodles", "garlic", "fish sauce", "oil"],
+      "instructions": "1. Soak glass noodles until softened; drain and cut.\n2. Mix ground pork with minced garlic, fish sauce, shredded cabbage, carrot, chopped shrimp, and noodles.\n3. Place mixture on wrapper, roll tightly, sealing edges.\n4. Fry at 350°F (175°C) until golden and crisp; drain.\n5. Serve hot with nuoc cham dipping sauce.",
+      "servings": 4,
+      "prepMinutes": 25,
+      "cookMinutes": 15,
+      "sourceUrl": "https://tastesbetterfromscratch.com/fresh-spring-rolls/",
       "owner": "admin@foo.com"
     },
     {
-      "title": "Loco Moco",
-      "cuisine": "Hawaiian",
-      "description": "Beef patty over rice, brown gravy, sunny-side egg.",
       "imageUrl": "https://www.tasteofhome.com/wp-content/uploads/2025/01/EXPS_TOHD25_279299_NancyMock_07.jpg",
       "dietary": ["Contains Dairy"],
       "ingredients": ["ground beef", "rice", "onion", "beef stock", "butter", "flour", "egg"],
+      "instructions": "1. Form seasoned beef patties; sear both sides until cooked to preference; keep warm.\n2. In same pan, melt butter; add sliced onion and cook until soft.\n3. Stir in flour to make a roux; cook 1–2 minutes.\n4. Whisk in beef stock gradually; simmer until thick gravy forms; season to taste.\n5. Fry eggs sunny-side up.\n6. Serve steamed rice topped with patty, gravy, and egg.",
+      "servings": 2,
+      "prepMinutes": 10,
+      "cookMinutes": 20,
+      "sourceUrl": "https://onohawaiianrecipes.com/recipes/a-classic-loco-moco/",
       "owner": "admin@foo.com"
     },
     {
-      "title": "Garlic Shrimp",
-      "cuisine": "Hawaiian",
-      "description": "Garlicky butter shrimp with rice and lemon.",
       "imageUrl": "https://www.allrecipes.com/thmb/us00EX6PHgu4Dwfq9xfH6SyliA0=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/220597-Simple-garlic-shrimp-beauty3x4_38539-63f687e1ec6a41e88dfb5a9c9021e194.jpg",
       "dietary": ["Gluten-Free"],
       "ingredients": ["shrimp", "garlic", "butter", "olive oil", "paprika", "lemon", "rice"],
+      "instructions": "1. Pat shrimp dry; season lightly with salt, pepper, and paprika.\n2. Melt butter with a little olive oil; add minced garlic, cook fragrant (30–60 sec).\n3. Add shrimp; sauté 2–3 minutes per side until pink and opaque.\n4. Finish with lemon juice; adjust seasoning.\n5. Serve immediately over rice with extra lemon.",
+      "servings": 4,
+      "prepMinutes": 10,
+      "cookMinutes": 10,
+      "sourceUrl": "https://www.dinneratthezoo.com/garlic-butter-shrimp/",
       "owner": "admin@foo.com"
     },
     {
-      "title": "Pad Thai",
-      "cuisine": "Thai",
-      "description": "Stir-fried rice noodles with tamarind sauce, egg, tofu/shrimp, peanuts.",
       "imageUrl": "https://inquiringchef.com/wp-content/uploads/2023/02/Authentic-Pad-Thai_square-1908.jpg",
       "dietary": ["Contains Nuts"],
       "ingredients": ["rice noodles", "tamarind", "fish sauce", "palm sugar", "egg", "tofu", "shrimp", "bean sprouts", "peanuts", "lime"],
+      "instructions": "1. Soak rice noodles in warm water until pliable; drain.\n2. Mix tamarind, fish sauce, and palm sugar to make sauce.\n3. Stir-fry tofu/shrimp briefly; push aside, scramble eggs.\n4. Add noodles and sauce; toss until coated and just tender.\n5. Add bean sprouts; toss 30–60 sec.\n6. Plate with crushed peanuts and lime wedges.",
+      "servings": 3,
+      "prepMinutes": 20,
+      "cookMinutes": 10,
+      "sourceUrl": "https://tastesbetterfromscratch.com/pad-thai/",
       "owner": "admin@foo.com"
     },
     {
-      "title": "Margherita Pizza",
-      "cuisine": "Italian",
-      "description": "Tomato, mozzarella, basil on thin crust.",
       "imageUrl": "https://kitchenswagger.com/wp-content/uploads/2023/05/margherita-pizza-close.jpg",
       "dietary": ["Vegetarian", "Contains Dairy"],
       "ingredients": ["pizza dough", "san marzano tomatoes", "mozzarella", "basil", "olive oil", "salt"],
+      "instructions": "1. Preheat oven with stone/steel to 500–550°F (260–290°C).\n2. Stretch dough thin; spread crushed San Marzano tomatoes lightly.\n3. Top with sliced mozzarella; drizzle olive oil; salt lightly.\n4. Bake 6–8 minutes until crust is blistered and cheese melted.\n5. Add fresh basil leaves after baking; slice and serve.",
+      "servings": 2,
+      "prepMinutes": 15,
+      "cookMinutes": 8,
+      "sourceUrl": "https://bellyfull.net/classic-margherita-pizza/",
       "owner": "admin@foo.com"
     },
     {
-      "title": "Butter Chicken",
-      "cuisine": "Indian",
-      "description": "Creamy tomato-butter sauce with spiced chicken.",
       "imageUrl": "https://www.allrecipes.com/thmb/8L5gq8V7Kyl3qfoDe5vhCU_rvZI=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/AR-141169-Easy-Indian-Butter-Chicken-DDMFS-4x3-beauty-588ff54d1e0f4a0788906e851e27d540.jpg",
       "dietary": ["Contains Dairy", "Gluten-Free"],
       "ingredients": ["chicken", "yogurt", "garam masala", "tomato puree", "butter", "cream", "garlic", "ginger"],
+      "instructions": "1. Marinate chicken in yogurt, garam masala, garlic, and ginger 30+ minutes.\n2. Sear chicken until lightly browned; set aside.\n3. In same pan, add butter and tomato puree; simmer with spices.\n4. Return chicken; simmer until cooked through.\n5. Stir in cream; adjust salt and garam masala; simmer briefly.\n6. Serve with rice or naan.",
+      "servings": 4,
+      "prepMinutes": 20,
+      "cookMinutes": 25,
+      "sourceUrl": "https://www.indianhealthyrecipes.com/butter-chicken/",
       "owner": "admin@foo.com"
     },
     {
-      "title": "Shakshuka",
-      "cuisine": "Middle Eastern",
-      "description": "Eggs poached in spicy tomato-pepper sauce.",
       "imageUrl": "https://downshiftology.com/wp-content/uploads/2023/12/Shakshuka-main-1-500x500.jpg",
       "dietary": ["Vegetarian", "Gluten-Free"],
       "ingredients": ["egg", "tomatoes", "bell pepper", "onion", "garlic", "paprika", "cumin", "olive oil"],
+      "instructions": "1. Sauté onion and bell pepper in olive oil until soft; add garlic.\n2. Stir in paprika and cumin; cook briefly.\n3. Add crushed tomatoes; simmer 10 minutes to thicken; season.\n4. Make wells; crack eggs into wells.\n5. Cover and cook until whites set and yolks are still runny.\n6. Serve with herbs and crusty bread if desired.",
+      "servings": 3,
+      "prepMinutes": 10,
+      "cookMinutes": 15,
+      "sourceUrl": "https://downshiftology.com/recipes/shakshuka/",
       "owner": "admin@foo.com"
     },
     {
-      "title": "Bibimbap",
-      "cuisine": "Korean",
-      "description": "Mixed rice bowl with veggies, beef, egg, and gochujang.",
       "imageUrl": "https://upload.wikimedia.org/wikipedia/commons/4/44/Dolsot-bibimbap.jpg",
       "dietary": ["Dairy-Free"],
       "ingredients": ["rice", "spinach", "bean sprouts", "carrot", "shiitake", "beef", "egg", "gochujang", "sesame oil"],
+      "instructions": "1. Cook rice; keep warm.\n2. Sauté vegetables separately with a little oil and salt: spinach, sprouts, carrot, mushrooms.\n3. Cook sliced beef with soy, sugar, garlic; set aside.\n4. Fry eggs sunny-side up.\n5. Arrange rice in bowls; top with veggies, beef, and egg.\n6. Serve with gochujang and a drizzle of sesame oil; mix before eating.",
+      "servings": 4,
+      "prepMinutes": 25,
+      "cookMinutes": 20,
+      "sourceUrl": "https://mykoreankitchen.com/bibimbap-korean-mixed-rice-with-meat-and-assorted-vegetables/",
       "owner": "admin@foo.com"
     },
     {
-      "title": "Pho Ga",
-      "cuisine": "Vietnamese",
-      "description": "Light chicken broth with rice noodles and herbs.",
+      "title": "Grilled Cheese",
+      "cuisine": "American",
+      "description": "Classic buttery grilled cheese sandwich with a perfectly crisp golden crust and melty cheese center.",
+      "imageUrl": "https://natashaskitchen.com/wp-content/uploads/2021/08/Grilled-Cheese-Sandwich-SQ.jpg",
+      "dietary": ["Vegetarian"],
+      "ingredients": [
+        "bread",
+        "butter",
+        "cheese"
+      ],
+      "instructions": "1. Heat a skillet over medium-low heat.\n2. Butter one side of each bread slice evenly.\n3. Place one slice, buttered side down, on the skillet; add cheese slices on top.\n4. Top with the second slice of bread, buttered side up.\n5. Cook slowly 2–3 minutes per side, pressing gently with a spatula, until bread is golden and cheese fully melts.\n6. For extra crispiness, spread a thin layer of mayo on the outside before grilling instead of butter.\n7. Slice in half and serve hot.",
+      "servings": 2,
+      "prepMinutes": 5,
+      "cookMinutes": 6,
+      "sourceUrl": "https://www.allrecipes.com/recipe/23891/grilled-cheese-sandwich/",
+      "owner": "admin@foo.com"
+    },
+    {
       "imageUrl": "https://delightfulplate.com/wp-content/uploads/2019/04/Pho-Ga-Hanoi-Vietnamese-Chicken-Noodle-Soup.jpg",
       "dietary": ["Dairy-Free", "Gluten-Free"],
       "ingredients": ["chicken", "rice noodles", "onion", "ginger", "star anise", "cinnamon", "fish sauce", "scallion", "cilantro"],
+      "instructions": "1. Char onion and ginger; simmer with chicken, star anise, and cinnamon to make broth; skim.\n2. Remove chicken when done; shred; season broth with fish sauce and salt.\n3. Soak/cook rice noodles per package; drain.\n4. Assemble bowls with noodles, shredded chicken, and hot broth.\n5. Top with scallions and cilantro; serve with lime and chili.",
+      "servings": 4,
+      "prepMinutes": 20,
+      "cookMinutes": 60,
+      "sourceUrl": "https://www.recipetineats.com/vietnamese-chicken-pho-soup-pho-ga/",
       "owner": "admin@foo.com"
     }
   ]
