--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -234,6 +234,9 @@
       "owner": "admin@foo.com"
     },
     {
+      "title": "Beef Wellington",
+      "cuisine": "British",
+      "description": "Tenderloin wrapped with mushroom duxelles, prosciutto, puff pastry.",
       "imageUrl": "https://static01.nyt.com/images/2019/12/13/dining/mc-beef-wellington/mc-beef-wellington-mediumSquareAt3X-v2.jpg",
       "dietary": ["Contains Dairy"],
       "ingredients": ["beef tenderloin", "mushrooms", "shallots", "garlic", "thyme", "prosciutto", "puff pastry", "egg", "dijon mustard", "butter"],
@@ -245,6 +248,9 @@
       "owner": "admin@foo.com"
     },
     {
+      "title": "Chicken Enchiladas",
+      "cuisine": "Mexican",
+      "description": "Tortillas filled with shredded chicken, topped with enchilada sauce and cheese.",
       "imageUrl": "https://www.tasteofhome.com/wp-content/uploads/2024/03/Easy-Chicken-Enchiladas_FT24_32264_JR_0312_3.jpg?fit=700%2C1024",
       "dietary": ["Contains Dairy"],
       "ingredients": ["corn tortillas", "shredded chicken", "enchilada sauce", "cheddar cheese", "onion", "cilantro", "cumin", "chili powder", "sour cream (optional)"],
@@ -256,6 +262,9 @@
       "owner": "admin@foo.com"
     },
     {
+      "title": "Spring Rolls",
+      "cuisine": "Vietnamese",
+      "description": "Crispy rolls with pork, shrimp, and veggies; serve with nuoc cham.",
       "imageUrl": "https://themom100.com/wp-content/uploads/2024/01/vietnamese-spring-rolls-5580.jpg",
       "dietary": ["Dairy-Free"],
       "ingredients": ["spring roll wrappers", "ground pork", "shrimp", "cabbage", "carrot", "glass noodles", "garlic", "fish sauce", "oil"],
@@ -267,6 +276,9 @@
       "owner": "admin@foo.com"
     },
     {
+      "title": "Loco Moco",
+      "cuisine": "Hawaiian",
+      "description": "Beef patty over rice, brown gravy, sunny-side egg.",
       "imageUrl": "https://www.tasteofhome.com/wp-content/uploads/2025/01/EXPS_TOHD25_279299_NancyMock_07.jpg",
       "dietary": ["Contains Dairy"],
       "ingredients": ["ground beef", "rice", "onion", "beef stock", "butter", "flour", "egg"],
@@ -278,6 +290,9 @@
       "owner": "admin@foo.com"
     },
     {
+      "title": "Garlic Shrimp",
+      "cuisine": "Hawaiian",
+      "description": "Garlicky butter shrimp with rice and lemon.",
       "imageUrl": "https://www.allrecipes.com/thmb/us00EX6PHgu4Dwfq9xfH6SyliA0=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/220597-Simple-garlic-shrimp-beauty3x4_38539-63f687e1ec6a41e88dfb5a9c9021e194.jpg",
       "dietary": ["Gluten-Free"],
       "ingredients": ["shrimp", "garlic", "butter", "olive oil", "paprika", "lemon", "rice"],
@@ -289,6 +304,9 @@
       "owner": "admin@foo.com"
     },
     {
+      "title": "Pad Thai",
+      "cuisine": "Thai",
+      "description": "Stir-fried rice noodles with tamarind sauce, egg, tofu/shrimp, peanuts.",
       "imageUrl": "https://inquiringchef.com/wp-content/uploads/2023/02/Authentic-Pad-Thai_square-1908.jpg",
       "dietary": ["Contains Nuts"],
       "ingredients": ["rice noodles", "tamarind", "fish sauce", "palm sugar", "egg", "tofu", "shrimp", "bean sprouts", "peanuts", "lime"],
@@ -300,6 +318,9 @@
       "owner": "admin@foo.com"
     },
     {
+      "title": "Margherita Pizza",
+      "cuisine": "Italian",
+      "description": "Tomato, mozzarella, basil on thin crust.",
       "imageUrl": "https://kitchenswagger.com/wp-content/uploads/2023/05/margherita-pizza-close.jpg",
       "dietary": ["Vegetarian", "Contains Dairy"],
       "ingredients": ["pizza dough", "san marzano tomatoes", "mozzarella", "basil", "olive oil", "salt"],
@@ -311,6 +332,9 @@
       "owner": "admin@foo.com"
     },
     {
+      "title": "Butter Chicken",
+      "cuisine": "Indian",
+      "description": "Creamy tomato-butter sauce with spiced chicken.",
       "imageUrl": "https://www.allrecipes.com/thmb/8L5gq8V7Kyl3qfoDe5vhCU_rvZI=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/AR-141169-Easy-Indian-Butter-Chicken-DDMFS-4x3-beauty-588ff54d1e0f4a0788906e851e27d540.jpg",
       "dietary": ["Contains Dairy", "Gluten-Free"],
       "ingredients": ["chicken", "yogurt", "garam masala", "tomato puree", "butter", "cream", "garlic", "ginger"],
@@ -322,6 +346,9 @@
       "owner": "admin@foo.com"
     },
     {
+      "title": "Shakshuka",
+      "cuisine": "Middle Eastern",
+      "description": "Eggs poached in spicy tomato-pepper sauce.",
       "imageUrl": "https://downshiftology.com/wp-content/uploads/2023/12/Shakshuka-main-1-500x500.jpg",
       "dietary": ["Vegetarian", "Gluten-Free"],
       "ingredients": ["egg", "tomatoes", "bell pepper", "onion", "garlic", "paprika", "cumin", "olive oil"],
@@ -333,6 +360,9 @@
       "owner": "admin@foo.com"
     },
     {
+      "title": "Bibimbap",
+      "cuisine": "Korean",
+      "description": "Mixed rice bowl with veggies, beef, egg, and gochujang.",
       "imageUrl": "https://upload.wikimedia.org/wikipedia/commons/4/44/Dolsot-bibimbap.jpg",
       "dietary": ["Dairy-Free"],
       "ingredients": ["rice", "spinach", "bean sprouts", "carrot", "shiitake", "beef", "egg", "gochujang", "sesame oil"],
@@ -362,6 +392,9 @@
       "owner": "admin@foo.com"
     },
     {
+      "title": "Pho Ga",
+      "cuisine": "Vietnamese",
+      "description": "Light chicken broth with rice noodles and herbs.",
       "imageUrl": "https://delightfulplate.com/wp-content/uploads/2019/04/Pho-Ga-Hanoi-Vietnamese-Chicken-Noodle-Soup.jpg",
       "dietary": ["Dairy-Free", "Gluten-Free"],
       "ingredients": ["chicken", "rice noodles", "onion", "ginger", "star anise", "cinnamon", "fish sauce", "scallion", "cilantro"],
