Add Unsplash key to CI and update shopping list test
Added UNSPLASH_ACCESS_KEY to CI environment variables for acceptance tests. Updated shopping list TestCafe test selectors to improve modal and title matching.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,5 +35,6 @@ jobs:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_PASS: ${{ secrets.GMAIL_PASS }}
+          UNSPLASH_ACCESS_KEY: ${{ secrets.UNSPLASH_ACCESS_KEY }}
         run: npm run test-acceptance-ci
 
