Update CI acceptance test browser to Edge
Changed the 'test-acceptance-ci' script in package.json to use 'edge:headless' instead of 'chrome:headless' for running TestCafe acceptance tests in CI.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "playwright-development": "npx playwright test",
-    "test-acceptance-ci": "testcafe 'chrome:headless' tests/acceptance/*.testcafe.js --app 'npm run build && npm run start' --window-size 1920,1080 --app-init-delay 60000",
+    "test-acceptance-ci": "testcafe 'edge:headless' tests/acceptance/*.testcafe.js --app 'npm run build && npm run start' --window-size 1920,1080 --app-init-delay 60000",
     "test-acceptance-local": "testcafe 'chrome' tests/acceptance/*.testcafe.js --app 'npm run build && npm run start' --window-size 1920,1080 --app-init-delay 20000",
     "test-acceptance-single": "testcafe 'chrome:headless' tests/acceptance/*.testcafe.js --window-size 1920,1080"
   },
