--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "playwright-development": "npx playwright test",
-    "test-acceptance-ci": "testcafe 'chromium:headless' tests/acceptance/*.testcafe.js --app 'npm run build && npm run start' --window-size 1920,1080 --app-init-delay 60000",
+    "test-acceptance-ci": "testcafe \"chrome:headless --no-sandbox --disable-dev-shm-usage --use-fake-ui-for-media-stream --use-fake-device-for-media-stream --disable-notifications --deny-permission-prompts\" tests/acceptance/*.testcafe.js --app \"npm run build && npm run start\" --window-size 1920,1080 --app-init-delay 60000",
     "test-acceptance-local": "testcafe 'chrome' tests/acceptance/*.testcafe.js --app 'npm run build && npm run start' --window-size 1920,1080 --app-init-delay 20000",
     "test-acceptance-single": "testcafe 'chrome:headless' tests/acceptance/*.testcafe.js --window-size 1920,1080"
   },
